--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "driving"
+name = "kms_to_miles"
 edition = "2021"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num-rational = "0.4.1"
 num = "0.4.0"
 min-max = "0.1.8"
 enum-iterator = "1.4.1"
